# boids

./: .clang-format  CMakeLists.txt  README.md
src/: AIBoid.cpp  AIBoid.hpp  AIBoidConfig.hpp  Boid.cpp  Boid.hpp  EvolutionManager.cpp  EvolutionManager.hpp  FitnessConfig.hpp  FlockingMetrics.hpp  Globals.cpp  Globals.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  Predator.cpp  Predator.hpp  Utils.hpp  main.cpp
